--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   equatable: ^2.0.5
+  firebase_core: ^2.32.0
   firebase_messaging: ^14.9.4
   flutter:
     sdk: flutter
